--- a/solutions/daniel/Dan's notebook.ipynb
+++ b/solutions/daniel/Dan's notebook.ipynb
@@ -116,8 +116,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>3. Irrelevant and redundant variables</h4>\n"
+    "<h4>3. What distribution scheme did you use? What data partitioning allocation did you set?</h4>\n",
+    "I've used N-fold cross validation with stratified sampling. This is our dataset is skewed."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
