--- a/solutions/newton/lachlan-workbook.ipynb
+++ b/solutions/newton/lachlan-workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Husband           15681\n",
+      "Not-in-family     10140\n",
+      "Own-child          6079\n",
+      "Unmarried          4076\n",
+      "Wife               1853\n",
+      "Other-relative     1198\n",
+      "Name: Relationship, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_obj = df.select_dtypes(['object'])\n",
+    "df[df_obj.columns] = df_obj.apply(lambda x: x.str.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,56 +197,62 @@
     "df = df.drop(columns='CapitalAvg')\n",
     "df = df.drop(columns='Sex')\n",
     "df = df.drop(columns='Education')\n",
-    "df = df.drop(columns='Race')\n",
-    "df['AtRisk'],AtRisk = pd.factorize(df['AtRisk'])\n",
-    "df['Country'],Country = pd.factorize(df['Country'])\n",
-    "df['Gender'],Gender = pd.factorize(df['Gender'])\n",
-    "df['WorkClass'],WorkClass = pd.factorize(df['WorkClass'])\n",
-    "df['MaritalStatus'],AtRisk = pd.factorize(df['MaritalStatus'])\n",
-    "df['Occupation'],AtRisk = pd.factorize(df['Occupation'])\n",
-    "df['Relationship'],AtRisk = pd.factorize(df['Relationship'])\n",
-    "df = df.apply(lambda x: x.fillna(x.median())) "
+    "df = df.drop(columns='Race')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 39999 entries, 0 to 39998\n",
-      "Data columns (total 14 columns):\n",
-      "ID                        39999 non-null int64\n",
-      "Age                       39999 non-null float64\n",
-      "WorkClass                 39999 non-null int64\n",
-      "Weighting                 39999 non-null float64\n",
-      "NumYearsEducation         39999 non-null float64\n",
-      "MaritalStatus             39999 non-null int64\n",
-      "Occupation                39999 non-null int64\n",
-      "Relationship              39999 non-null int64\n",
-      "Gender                    39999 non-null int64\n",
-      "CapitalLoss               39999 non-null float64\n",
-      "CapitalGain               39999 non-null float64\n",
-      "NumWorkingHoursPerWeek    39999 non-null float64\n",
-      "Country                   39999 non-null int64\n",
-      "AtRisk                    39999 non-null int64\n",
-      "dtypes: float64(6), int64(8)\n",
-      "memory usage: 4.3 MB\n",
-      "None\n"
+      "Private             29247\n",
+      "Self-emp-not-inc     3123\n",
+      "Local-gov            2533\n",
+      "State-gov            1579\n",
+      "Self-emp-inc         1362\n",
+      "Federal-gov          1161\n",
+      "Without-pay            15\n",
+      "Never-worked            7\n",
+      "Name: WorkClass, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(df.info())"
+    "\n",
+    "df['AtRisk'],AtRisk = pd.factorize(df['AtRisk'])\n",
+    "df['Country'],Country = pd.factorize(df['Country'])\n",
+    "df['Country'].replace(\"USA\", \"United-States\", inplace=True)\n",
+    "df['Country'].replace(\"US\", \"United-States\", inplace=True)\n",
+    "df['Country'].replace(\"?\", df['Country'].value_counts().idxmax(), inplace=True)\n",
+    "\n",
+    "df['Gender'],Gender = pd.factorize(df['Gender'])\n",
+    "\n",
+    "df['WorkClass'].replace(\"?\", df['WorkClass'].value_counts().idxmax(), inplace=True)\n",
+    "print(df['WorkClass'].value_counts())\n",
+    "df['WorkClass'],WorkClass = pd.factorize(df['WorkClass'])\n",
+    "\n",
+    "df['MaritalStatus'],AtRisk = pd.factorize(df['MaritalStatus'])\n",
+    "df['Occupation'],AtRisk = pd.factorize(df['Occupation'])\n",
+    "df['Occupation'].replace(\"?\", df['Occupation'].value_counts().idxmax(), inplace=True)\n",
+    "\n",
+    "df['Relationship'],AtRisk = pd.factorize(df['Relationship'])\n",
+    "df = df.apply(lambda x: x.fillna(x.median())) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +260,7 @@
      "output_type": "stream",
      "text": [
       "Train accuracy: 1.0\n",
-      "Test accuracy: 0.8039166666666666\n"
+      "Test accuracy: 0.80575\n"
      ]
     }
    ],
@@ -250,27 +280,32 @@
     "model.fit(x_train, y_train)\n",
     "\n",
     "print(\"Train accuracy:\", model.score(x_train, y_train))\n",
-    "X_test = np.where(np.isfinite(X_test)==False, 0, X_test)\n",
+    "x_test = np.where(np.isfinite(x_test)==False, 0, x_test)\n",
     "print(\"Test accuracy:\", model.score(x_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Length of feature_names, 39999 does not match number of features, 13",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-58-b1daf39ab293>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# visualize\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdotfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStringIO\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mexport_graphviz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdotfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeature_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'AtRisk'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpydot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph_from_dot_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdotfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_png\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"week3_dt_viz.png\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# saved in the following file - will return True if successful\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\tree\\export.py\u001b[0m in \u001b[0;36mexport_graphviz\u001b[1;34m(decision_tree, out_file, max_depth, feature_names, class_names, label, filled, leaves_parallel, impurity, node_ids, proportion, rotate, rounded, special_characters, precision)\u001b[0m\n\u001b[0;32m    773\u001b[0m             \u001b[0mrounded\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrounded\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspecial_characters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mspecial_characters\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    774\u001b[0m             precision=precision)\n\u001b[1;32m--> 775\u001b[1;33m         \u001b[0mexporter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecision_tree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    776\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    777\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mreturn_string\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\tree\\export.py\u001b[0m in \u001b[0;36mexport\u001b[1;34m(self, decision_tree)\u001b[0m\n\u001b[0;32m    399\u001b[0m                                  \u001b[1;34m\"does not match number of features, %d\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    400\u001b[0m                                  % (len(self.feature_names),\n\u001b[1;32m--> 401\u001b[1;33m                                     decision_tree.n_features_))\n\u001b[0m\u001b[0;32m    402\u001b[0m         \u001b[1;31m# each part writes to out_file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    403\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Length of feature_names, 39999 does not match number of features, 13"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dot: graph is too large for cairo-renderer bitmaps. Scaling by 0.241828 to fit\r\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -280,17 +315,58 @@
     "\n",
     "# visualize\n",
     "dotfile = StringIO()\n",
-    "export_graphviz(model, out_file=dotfile, feature_names=df.drop(columns='AtRisk'))\n",
+    "export_graphviz(model, out_file=dotfile)\n",
     "graph = pydot.graph_from_dot_data(dotfile.getvalue())\n",
-    "graph.write_png(\"week3_dt_viz.png\") # saved in the following file - will return True if successful"
+    "graph.write_png(\"viz.png\") # saved in the following file - will return True if successful"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 0.7968141719347119\n",
+      "Test accuracy: 0.7969166666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logisticRegr = LogisticRegression()\n",
+    "logisticRegr.fit(x_train, y_train)\n",
+    "print(\"Train accuracy:\", logisticRegr.score(x_train, y_train))\n",
+    "x_test = np.where(np.isfinite(x_test)==False, 0, x_test)\n",
+    "print(\"Test accuracy:\", logisticRegr.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy: 0.2375441980070717\n",
+      "Test accuracy: 0.2375\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "nn = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2))\n",
+    "nn.fit(x_train, y_train)\n",
+    "\n",
+    "print(\"Train accuracy:\", nn.score(x_train, y_train))\n",
+    "x_test = np.where(np.isfinite(x_test)==False, 0, x_test)\n",
+    "print(\"Test accuracy:\", nn.score(x_test, y_test))"
+   ]
   },
   {
    "cell_type": "markdown",
